--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0"
-anyhow = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+anyhow = { version = "1.0", default-features = false }
 zerocopy = "0.3"
-bincode = "1.3"
 
 [dev-dependencies]
 tempfile = "3.1"
