--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 zerocopy = "0.3"
 bincode = "1.3"
+serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3.1"
